New stuff's at the top.  This list is not necessarily complete.

3.08 (pending)
 o Rework filemask logic to match last extension and allow for string matching (Gregg)

3.07 
 o Tweak build process (Steven)
 o Rework internals to increase file and directory limits (Steven, Gregg)
 o Rework internal sleep durations to increase performance (Gregg)
 o Rework file scanning buffer handling to increase performance (Gregg)
 o Speed up Config->Tree->Collapse before switching speed (Steven)
 o Speed up Dup find code. (Gregg)
 o Update configuration notebook scanning page (Steven)
 o Rework states logic to allow longer state names, tickets #109, #31 (Steven)
 o Report delta time in debug messages (Steven)
 o Added BldFullPathName cleaned up comp dirs code fix right left misalignment(Steven)
 o Added BldQuotedFileName and BldQuotedFullPathName to streamline code. (Steven, Gregg)
 o Increased limit on Subject EA to 1024 from 40. (Gregg)
 o Corrected dir sizes accel key to ctrl + z. (Gregg)
 o Fixed addition of ff in Hex notation by archiver editor. (John)
 o Updated build instructions on FM/2 Wiki. (David)
 o Dir sizes correct some sizing and positioning issues. (Steve)
 o Removed error message in eas.c which caused seek and scan for text including eas to fail on
   read only files. (Gregg)
 o Fixed unnecessary menu item removal when FM/2 is run as the WPS.(Gregg)
 o Fixed the restore of the settings under "Include in details view" on the "DirView"
   tab of the configuration notebook, Ticket 118/71 (John)
 o Subject column can be moved to left side of split bar in directory container
   and/or sized which will truncate long subjects (Gregg)
 o Avoid can not set fm3.ini read-only failure - DosSetPathInfo (Steven)
 o Avoid exception when exiting File/Directory Object Information dialog (Steven)
 o Fix a fast viewer text file load failure. (Gregg)
 o Reversed behavior of horizontal scroll bar in fast viewer bar present with unwrapped text
   absent with wrapped tex and hex